# nonsense

./: .gitignore  .pyup.yml  IKEA.tex.bak  adj.txt  descr.sh  descr.txt  descr.txt.bak  descr_gen.sh  descr_words.txt  description.py  download.json  download.py  fetch.py  generate.py  ikeagen.py  ikeaname.txt  ikeaname.txt.bak  liste.sh  prepare.py  präf.txt  publish.sh  pyproject.toml  requirements.txt  server.py  suf.txt  telegramBot.py  tex.sh  utils.py  vorlage.tex.bak  words.yaml
english/: adj.txt  descr.txt  descr_gen.sh  descr_words.txt  ikeaname.txt  liste.sh  liste_pp.sh  nomen.txt  präf.txt
fetch/fetch/: items.py  middlewares.py  settings.py
fetch/fetch/spiders/: nonsense.py
public/: index.html  style.css  style.css.map  style.scss  web.html
public/icons/: browserconfig.xml  manifest.json
