[tool.poetry]
name = "nonsense"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
PyYAML = "^6.0"
gunicorn = "^21.0.0"
tomli-w = "^1.0.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
